# rustcode

./: .gitignore  Cargo.toml  NOTES.md  README.md  async.md  objects.py  p  print.c  print.js  upper  upper.c
code/: ex01.rs  example01.rs  example02.rs  example03.rs  example04.rs  hof01.rs  hof02.rs  struct.rs  struct2.rs  struct3.rs
examples/: NOTES.md
examples/b01-var/: Cargo.toml
examples/b02-fun/: Cargo.toml
examples/b03-primitives/: Cargo.toml
examples/b04-if/: Cargo.toml
examples/b05-loops/: Cargo.toml
examples/b06-vec/: Cargo.toml
examples/embassy-blinky-tasks/: Cargo.toml
examples/embassy-blinky-tasks/.cargo/: config
examples/embassy-blinky-tasks/src/: main.rs
examples/ex-arg/: Cargo.toml
examples/ex-borrowing/: Cargo.toml
examples/ex-cat/: Cargo.toml
examples/ex-cell/: Cargo.toml
examples/ex-concat/: Cargo.toml
examples/ex-dyn/: Cargo.toml
examples/ex-ffi/: add.rs  libadd.dylib  test.c
examples/ex-from-into/: Cargo.toml
examples/ex-generics/: Cargo.toml
examples/ex-heapless/: Cargo.toml
examples/ex-largest/: Cargo.toml
examples/ex-macro/: Cargo.toml
examples/ex-mod/: Cargo.toml  README.md
examples/ex-nom/: Cargo.toml  README.md
examples/ex-owner/: Cargo.toml
examples/ex-rand/: Cargo.toml
examples/ex-rtic/: .oldCargo.toml.swp  README.md  newCargo.toml
examples/ex-shrinkwraprs/: Cargo.toml  README.md
examples/ex-str/: Cargo.toml
examples/ex-swc/: Cargo.toml  test.js
examples/ex-traits/: Cargo.toml  (+1 more)
notes/: keywords.md  study00.md  study01.md  study02.md  study03.md
raytracing/: main.rs
src/: main.rs
(+54 files in other folders)
