[package]
name = "embassy-blinky-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-executor = {version="0.6.3", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-rp = { version="0.2.0", features=["critical-section-impl", "time-driver"] }
embassy-time = "0.3.2"
panic-probe = "0.3.2"
rp2040-hal = { version="0.10", features=["rt", "critical-section-impl", "rom-v2-intrinsics"] }

